--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./assets/main.css">
     <title>Youtube</title>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   </head>
